Test for docs: added a script that tests doc snippets; added a workflow that invoke this script through Tox

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,7 @@
 [gh-actions]
 python =
     3.7: py37
-    3.7.10: py37
     3.8: py38
-    3.8.8: py38
     3.9: py39
 
 [testenv:test_api]
@@ -16,7 +14,7 @@ deps =
     coverage
     # text generation
     faker
-    # vectorizers
+    # common NLP and vectorizers
     spacy
     # dimensionality reduction
     umap-learn>=0.3.10
@@ -35,6 +33,19 @@ commands =
 
 install_command =
     python -m pip install --upgrade {opts} {packages}
+
+[testenv:test_doc_scripts]
+deps =
+    # common NLP and vectorizers
+    spacy
+    # dimensionality reduction
+    umap-learn>=0.3.10
+
+commands =
+    # get extra dependencies that deps do not cover
+    python -m spacy download en_core_web_md
+    # run tests and get coverage report
+    python docs/tests/doc_scripts.py
 
 [testenv:install]
 commands =
