Specified the diff paths for workflows that trigger on push; added workflow_dispatch to quick source test

--- a/.github/workflows/doc-script-test.yml
+++ b/.github/workflows/doc-script-test.yml
@@ -6,6 +6,12 @@ name: Documentation Script Test
 on:
   schedule:
     - cron: "0 0 * * 1"
+  push:
+    branches: [ main ]
+    paths:
+      - 'docs/**.*'
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
