--- a/.github/workflows/quick-source-test.yml
+++ b/.github/workflows/quick-source-test.yml
@@ -6,8 +6,14 @@ name: Quick Source Test
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'hover/**.py'
+      - 'tests/**.py'
+      - 'pytest.ini'
+      - 'fixture_module/**.py'
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
