Tox test_doc_scripts: added jupyter/jupyterlab to deps

--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,10 @@ deps =
     # common NLP and vectorizers
     spacy
     # dimensionality reduction
-    umap-learn>=0.3.10
+    umap-learn
     ivis[cpu]>=1.7
     # distant supervision
-    snorkel>=0.9.3
+    snorkel
     # exporting excel files
     openpyxl
 
@@ -36,10 +36,13 @@ install_command =
 
 [testenv:test_doc_scripts]
 deps =
+    # Jupyter environment
+    jupyter
+    jupyterlab
     # common NLP and vectorizers
     spacy
     # dimensionality reduction
-    umap-learn>=0.3.10
+    umap-learn
 
 commands =
     # get extra dependencies that deps do not cover
