Dropped Snorkel from dependencies again due to its overly strict version requirements

--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,12 @@ deps =
     # common NLP and vectorizers
     spacy
     # dimensionality reduction
-    umap-learn
+    umap-learn>=0.3.10
     ivis[cpu]>=1.7
     # distant supervision
-    snorkel
+    snorkel>=0.9.8
+    # utility wrappers
+    wrappy>=0.2.6
     # exporting excel files
     openpyxl
 
