Cross-OS Conda Build bugfix: specified conda-forge

--- a/.github/workflows/cross-os-conda-build.yml
+++ b/.github/workflows/cross-os-conda-build.yml
@@ -27,4 +27,4 @@ jobs:
         run: |
           conda update conda
           conda install conda-build
-          conda build --output-folder ./conda-out/ ./conda-recipe/
+          conda build --channel conda-forge --override-channels --output-folder ./conda-out/ ./conda-recipe/
