--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -24,6 +24,7 @@ requirements:
     - scipy >=1.3.2
     - tqdm >=4.0
     - rich >=11.0.0
+    - deprecated >=1.1.0
     - umap-learn >=0.3.10
 
 test:
