Minor mkdocs config change

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Hover
-site_description: "Hover over and label data rapidly."
+site_description: "Hover and label data rapidly."
 site_url: "https://phurwicz.github.io/hover"
 repo_url: "https://github.com/phurwicz/hover"
 repo_name: "phurwicz/hover"
