--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,8 +24,9 @@ nav:
         - 'Quickstart': 'pages/tutorial/t0-quickstart.md'
         - 'Using Recipes': 'pages/tutorial/t1-active-learning.md'
         - 'Server Options': 'pages/tutorial/t2-bokeh-app.md'
-        - 'Select and Move Data': 'pages/tutorial/t3-dataset-population-selection.md'
-        - 'Labeling with Annotator': 'pages/tutorial/t4-annotator-dataset-interaction.md'
+        - 'Dataset Mechanisms': 'pages/tutorial/t3-dataset-population-selection.md'
+        - 'Annotator & Plot Tools': 'pages/tutorial/t4-annotator-dataset-interaction.md'
+        - 'Finder & Selection Filter': 'pages/tutorial/t5-finder-filter.md'
     - 'Topics':
         #- 'Why Hover': 'pages/topics/what-hover-is.md'
         - 'Managing Data (under work)': 'pages/topics/managing-data.md' # jupyter illustration of ideas & best practices around SupervisableDataset
