--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,7 @@ nav:
         - 'Dataset Mechanisms': 'pages/tutorial/t3-dataset-population-selection.md'
         - 'Annotator & Plot Tools': 'pages/tutorial/t4-annotator-dataset-interaction.md'
         - 'Finder & Selection Filter': 'pages/tutorial/t5-finder-filter.md'
+        - 'Soft Label & Joint Filters': 'pages/tutorial/t6-softlabel-joint-filter.md'
     #- 'Topics':
         #- 'Why Hover': 'pages/topics/what-hover-is.md'
         #- 'Managing Data (under work)': 'pages/topics/managing-data.md' # jupyter illustration of ideas & best practices around SupervisableDataset
