Tox/pytest/tests: added a 'lite' mark for running tests in low-dependency environments

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 markers =
     core: central functionalities involved in most, if not all, use cases.
+    lite: fast to run and no platform-specific extra dependency.
     builtin: 'vanilla' extension beyond the core.
