--- a/tox.ini
+++ b/tox.ini
@@ -29,8 +29,27 @@ commands =
     # get extra dependencies that deps do not cover
     python -m spacy download en_core_web_md
     # run tests and get coverage report
-    coverage run --source=./hover -m pytest
+    coverage run --source=./hover -m pytest {posargs}
     coverage xml -o cobertura.xml
+
+install_command =
+    python -m pip install --upgrade {opts} {packages}
+
+[testenv:test_api_lite]
+# low-dependency fast test suite for compatibility
+deps =
+    pytest
+    faker
+    spacy
+    snorkel>=0.9.8
+    wrappy>=0.2.6
+    openpyxl
+
+commands =
+    # get extra dependencies that deps do not cover
+    python -m spacy download en_core_web_md
+    # run tests with "lite" mark
+    pytest -m lite {posargs}
 
 install_command =
     python -m pip install --upgrade {opts} {packages}
