Tox: added markdown-include as a dependency of doc script tests

--- a/tox.ini
+++ b/tox.ini
@@ -56,6 +56,8 @@ install_command =
 
 [testenv:test_doc_scripts]
 deps =
+    # auto-parse scripts in markdown files
+    markdown-include
     # Jupyter environment
     jupyter
     jupyterlab
