Tox test_doc_scripts: added markdown as dependency

--- a/tox.ini
+++ b/tox.ini
@@ -57,6 +57,7 @@ install_command =
 [testenv:test_doc_scripts]
 deps =
     # auto-parse scripts in markdown files
+    markdown
     markdown-include
     # Jupyter environment
     jupyter
