Tox: doc script test needs snorkel in the environment

--- a/tox.ini
+++ b/tox.ini
@@ -62,8 +62,9 @@ deps =
     # Jupyter environment
     jupyter
     jupyterlab
-    # common NLP and vectorizers
+    # dependencies for specific code
     spacy
+    snorkel>=0.9.8
 
 commands =
     # get extra dependencies that deps do not cover
