Updated conda recipe; told pre-commit to ignore conda recipe; minor comment change in tox

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,10 @@ repos:
     rev: v4.1.0
     hooks:
     -   id: check-yaml
+        exclude: |
+            (?x)^(
+                conda-recipe/meta.yaml
+            )$
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
 -   repo: https://github.com/psf/black
