--- a/tox.ini
+++ b/tox.ini
@@ -95,7 +95,7 @@ ignore =
     E501,
     W503,
 per-file-ignores =
-    # imported but unused
+    # "imported but unused": intended in __init__ files
     __init__.py: F401
 exclude = .git,__pycache__,docs,build,dist
 max-complexity = 10
