Tox install: allowing positional arguments

--- a/tox.ini
+++ b/tox.ini
@@ -74,7 +74,7 @@ commands =
 
 [testenv:install]
 commands =
-    python setup.py install
+    python setup.py install {posargs}
 
 [testenv:publish]
 allowlist_externals =
