--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Hover
 site_description: "Hover and label data rapidly."
 site_url: "https://phurwicz.github.io/hover"
-repo_url: "https://github.com/phurwicz/hover"
+repo_url: "https://github.com/phurwicz/hover.git"
 repo_name: "phurwicz/hover"
 
 theme:
@@ -29,10 +29,10 @@ nav:
         - 'Finder & Selection Filter': 'pages/tutorial/t5-finder-filter.md'
         - 'Soft Label & Joint Filters': 'pages/tutorial/t6-softlabel-joint-filter.md'
         - 'Custom Labeling Functions': 'pages/tutorial/t7-snorkel-improvise-rules.md'
-    - 'Topics':
-        - 'Data Type: Image': 'pages/topics/datatype-image.md'
-        - 'Data Type: Audio': 'pages/topics/datatype-audio.md'
-        - 'Data Type: Multimodal': 'pages/topics/datatype-multimodal.md'
+    #- 'Topics':
+    #    - 'Data Type: Image': 'pages/topics/datatype-image.md'
+    #    - 'Data Type: Audio': 'pages/topics/datatype-audio.md'
+    #    - 'Data Type: Multimodal': 'pages/topics/datatype-multimodal.md'
         #- 'Why Hover': 'pages/topics/what-hover-is.md'
         #- 'Customized Usage':
         #    - 'API Levels': 'pages/topics/api-levels.md' # discuss the interaction between recipe / dataset / explorer
