Tox docs_script_test: added wrappy as a dependency because Binder repo code uses it

--- a/tox.ini
+++ b/tox.ini
@@ -65,6 +65,7 @@ deps =
     # dependencies for specific code
     spacy
     snorkel>=0.9.8
+    wrappy>=0.2.6
 
 commands =
     # get extra dependencies that deps do not cover
