Tox: added a command specifically for testing with conda; using conda for environment creation. Workflows: added tox-conda to dependencies. Conda recipe: meta.yaml should test current source; moved conda-forge pre-staging to stable.yaml

--- a/.github/workflows/cross-os-source-test.yml
+++ b/.github/workflows/cross-os-source-test.yml
@@ -28,5 +28,5 @@ jobs:
     - name: Test with Tox
       run: |
         pip install --upgrade pip
-        pip install --upgrade tox tox-gh-actions
+        pip install --upgrade tox tox-gh-actions tox-conda
         tox -e test_api
