--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,14 @@
 [tox]
-#envlist = py37,py38,py39
+envlist = py37, py38, py39, py310
+requires =
+    tox-conda
 
 [gh-actions]
 python =
     3.7: py37
     3.8: py38
     3.9: py39
+    3.10: py310
 
 [testenv:test_api]
 deps =
@@ -53,6 +56,23 @@ commands =
 
 install_command =
     python -m pip install --upgrade {opts} {packages}
+
+[testenv:test_api_conda]
+# test using conda deps whenever possible
+conda_deps =
+    pytest
+    faker
+    spacy
+    snorkel>=0.9.8
+    openpyxl
+
+deps =
+    ivis[cpu]>=1.7
+    wrappy>=0.2.6
+
+commands =
+    python -m spacy download en_core_web_md
+    pytest {posargs}
 
 [testenv:test_doc_scripts]
 deps =
