--- a/.github/workflows/cross-os-install-source.yml
+++ b/.github/workflows/cross-os-install-source.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install tox
       run: |
         pip install --upgrade pip
-        pip install --upgrade tox
+        pip install --upgrade tox tox-gh-actions tox-conda
 
     - name: Install hover
       run: |
