Removed tox-conda usage, separating conda from tox automation. This is because conda build has its own configuration system

--- a/.github/workflows/cross-os-install-source.yml
+++ b/.github/workflows/cross-os-install-source.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install tox
       run: |
         pip install --upgrade pip
-        pip install --upgrade tox tox-gh-actions tox-conda
+        pip install --upgrade tox tox-gh-actions
 
     - name: Install hover
       run: |
