--- a/.github/workflows/cross-os-source-test.yml
+++ b/.github/workflows/cross-os-source-test.yml
@@ -28,5 +28,5 @@ jobs:
     - name: Test with Tox
       run: |
         pip install --upgrade pip
-        pip install --upgrade tox tox-gh-actions tox-conda
+        pip install --upgrade tox tox-gh-actions
         tox -e test_api
