Conda build: added missing test files

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -45,6 +45,9 @@ test:
     - spacy
     - snorkel>=0.9.8
     - openpyxl
+  source_files:
+    - fixture_module
+    - tests
 
 about:
   home: https://phurwicz.github.io/hover
