--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,8 +29,8 @@ nav:
         - 'Finder & Selection Filter': 'pages/tutorial/t5-finder-filter.md'
         - 'Soft Label & Joint Filters': 'pages/tutorial/t6-softlabel-joint-filter.md'
         - 'Custom Labeling Functions': 'pages/tutorial/t7-snorkel-improvise-rules.md'
-    #- 'Topics':
-    #    - 'Data Type: Image': 'pages/topics/datatype-image.md'
+    - 'Guides':
+        - 'Image Data': 'pages/guides/g0-datatype-image.md'
     #    - 'Data Type: Audio': 'pages/topics/datatype-audio.md'
     #    - 'Data Type: Multimodal': 'pages/topics/datatype-multimodal.md'
         #- 'Why Hover': 'pages/topics/what-hover-is.md'
