--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,6 @@ deps =
     openpyxl
 
 commands =
-    # get extra dependencies that deps do not cover
     python -m spacy download en_core_web_md
     # run tests with "lite" mark
     pytest -m lite {posargs}
@@ -67,11 +66,11 @@ deps =
     spacy
     snorkel>=0.9.8
     wrappy>=0.2.6
+    efficientnet_pytorch
+    torchvision
 
 commands =
-    # get extra dependencies that deps do not cover
     python -m spacy download en_core_web_md
-    # run tests and get coverage report
     python docs/tests/doc_scripts.py
 
 [testenv:install]
