Tox: updated dependencies for doc scripts

--- a/tox.ini
+++ b/tox.ini
@@ -63,11 +63,17 @@ deps =
     jupyter
     jupyterlab
     # dependencies for specific code
-    spacy
+    ## distant supervision
     snorkel>=0.9.8
-    wrappy>=0.2.6
+    ## text vectorizer
+    spacy
+    ## image vectorizer
     efficientnet_pytorch
     torchvision
+    ## audio handling
+    librosa
+    ## disk-persistent caching
+    wrappy>=0.2.6
 
 commands =
     python -m spacy download en_core_web_md
