Doc script workflow: added non-python deps

--- a/.github/workflows/doc-script-test.yml
+++ b/.github/workflows/doc-script-test.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Clone hover
       uses: actions/checkout@v2
 
-    - name: Clone hover's Binder repo
+    - name: Clone hover-binder
       uses: actions/checkout@v2
       with:
         repository: phurwicz/hover-binder
@@ -44,6 +44,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    
+    - name: Install Non-Python Dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install libsndfile1
 
     - name: Test with Tox
       run: |
