Revert "Tox: dropped SpaCy from auto-test dependencies"
This reverts commit 90c48970de106a12722856e8082d21d43bb99e9e.

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,8 @@ deps =
     coverage
     # text generation
     faker
+    # common NLP and vectorizers
+    spacy
     # dimensionality reduction
     ivis[cpu]>=1.7
     # distant supervision
@@ -25,6 +27,8 @@ deps =
     openpyxl
 
 commands =
+    # get extra dependencies that deps do not cover
+    python -m spacy download en_core_web_md
     # run tests and get coverage report
     coverage run --source=./hover -m pytest {posargs}
     coverage xml -o cobertura.xml
@@ -37,11 +41,13 @@ install_command =
 deps =
     pytest
     faker
+    spacy
     snorkel>=0.9.8
     wrappy>=0.2.6
     openpyxl
 
 commands =
+    python -m spacy download en_core_web_md
     # run tests with "lite" mark
     pytest -m lite {posargs}
 
@@ -70,9 +76,7 @@ deps =
     wrappy>=0.2.6
 
 commands =
-    # dependencies that PyPI does not cover
     python -m spacy download en_core_web_md
-    # build doc scripts and test
     python docs/tests/doc_scripts.py
 
 [testenv:install]
