--- a/.github/workflows/handle-inactive.yml
+++ b/.github/workflows/handle-inactive.yml
@@ -1,11 +1,11 @@
-name: Handle inactive issues
+name: Handle inactive issues / PRs
 on:
   schedule:
     - cron: "0 12 * * 0"
   workflow_dispatch:
 
 jobs:
-  close-issues:
+  check-issues-and-prs:
     runs-on: ubuntu-latest
     permissions:
       issues: write
