--- a/.github/workflows/handle-inactive.yml
+++ b/.github/workflows/handle-inactive.yml
@@ -1,7 +1,7 @@
 name: Handle inactive issues / PRs
 on:
   schedule:
-    - cron: "0 12 * * 0"
+    - cron: "0 12 * * *"
   workflow_dispatch:
 
 jobs:
