Tests & Tox: replaced str-to-float implementation with shaffle

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,8 @@ deps =
     coverage
     # text generation
     faker
+    # pseudo-random str-to-float
+    shaffle
     # common NLP and vectorizers
     spacy
     # dimensionality reduction
@@ -41,6 +43,7 @@ install_command =
 deps =
     pytest
     faker
+    shaffle
     spacy
     snorkel>=0.9.8
     wrappy>=0.2.6
