Conda build recipe: added dep

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -37,6 +37,7 @@ test:
   commands:
     - python -m spacy download en_core_web_md
     - pip install wrappy>=0.2.6
+    - pip install shaffle>=0.0.1
     - pytest -m lite
   requires:
     - pip
