Docs: started using mike

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,8 @@ plugins:
         - hover
 
 extra:
+  version:
+    provider: mike
   analytics:
     provider: google
     property: UA-211167044-1
