--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,8 @@
 [tox]
-envlist = py37, py38, py39, py310
+envlist = py38, py39, py310
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
@@ -18,6 +17,8 @@ deps =
     # pseudo-random str-to-float
     shaffle
     # common NLP and vectorizers
+    ## specific for python 3.10 and above
+    numpy>=1.22
     spacy
     # dimensionality reduction
     ivis[cpu]>=1.7
