Dropped python 3.10 from on-push workflows; redirected markdown-include to a custom fork

--- a/tox.ini
+++ b/tox.ini
@@ -60,7 +60,7 @@ install_command =
 deps =
     # auto-parse scripts in markdown files
     markdown
-    markdown-include
+    markdown-include @ git+https://github.com/haochuanwei/markdown-include.git
     # Jupyter environment
     jupyter
     jupyterlab
