Tox file: upgrade markdown-include

--- a/tox.ini
+++ b/tox.ini
@@ -60,7 +60,7 @@ install_command =
 deps =
     # auto-parse scripts in markdown files
     markdown
-    markdown-include @ git+https://github.com/haochuanwei/markdown-include.git
+    markdown-include>=0.7.0
     # Jupyter environment
     jupyter
     jupyterlab
