--- a/.github/workflows/doc-script-test.yml
+++ b/.github/workflows/doc-script-test.yml
@@ -59,7 +59,7 @@ jobs:
         git branch pipeline/notebook-generation
         git pull
         git checkout pipeline/notebook-generation
-        git merge main --commit
+        git merge main --no-edit
 
     - name: Test with Tox
       run: |
