Tox test_docs_scripts: added git-based file handling

--- a/tox.ini
+++ b/tox.ini
@@ -57,6 +57,10 @@ install_command =
     python -m pip install --upgrade {opts} {packages}
 
 [testenv:test_doc_scripts]
+allowlist_externals =
+    git
+    cp
+    rm
 deps =
     # auto-parse scripts in markdown files
     markdown
@@ -79,8 +83,14 @@ deps =
 
 commands =
     python -m spacy download en_core_web_md
+    git clone https://github.com/phurwicz/hover-binder
+    cp -r hover-binder/local_lib ./local_lib
+    cp -r hover-binder/custom_cache ./custom_cache
+    rm -rf hover-binder
     python docs/pipelines/check_scripts.py
+    rm -rf local_lib
     python docs/pipelines/generate_notebooks.py
+    rm -rf custom_cache
 
 [testenv:install]
 commands =
