Actions: split doc script check and notebook generation

--- a/tox.ini
+++ b/tox.ini
@@ -61,25 +61,7 @@ allowlist_externals =
     git
     cp
     rm
-deps =
-    # auto-parse scripts in markdown files
-    markdown
-    markdown-include>=0.7.0
-    # Jupyter environment
-    jupyter
-    jupyterlab
-    # dependencies for specific code
-    ## distant supervision
-    snorkel>=0.9.8
-    ## text vectorizer
-    spacy
-    ## image vectorizer
-    efficientnet_pytorch
-    torchvision
-    ## audio handling
-    librosa
-    ## disk-persistent caching
-    wrappy>=0.2.6
+deps = -rdocs/pipelines/requirements-doc-scripts.txt
 
 commands =
     python -m spacy download en_core_web_md
@@ -89,8 +71,17 @@ commands =
     rm -rf hover-binder
     python docs/pipelines/check_scripts.py
     rm -rf local_lib
-    python docs/pipelines/generate_notebooks.py
     rm -rf custom_cache
+
+[testenv:test_notebook_generation]
+allowlist_externals =
+    mkdir
+deps = -rdocs/pipelines/requirements-doc-scripts.txt
+
+commands =
+    python -m spacy download en_core_web_md
+    mkdir custom_cache
+    python docs/pipelines/generate_notebooks.py
 
 [testenv:install]
 commands =
