--- a/.github/workflows/doc-auto-notebook.yml
+++ b/.github/workflows/doc-auto-notebook.yml
@@ -35,9 +35,10 @@ jobs:
       run: |
         git config --global user.name ${{ secrets.ACTIONS_GIT_USERNAME }}
         git config --global user.email ${{ secrets.ACTIONS_GIT_EMAIL }}
-        git branch pipeline/notebook-generation --set-upstream-to origin pipeline/notebook-generation
-        git pull
+        git branch pipeline/notebook-generation
+        git branch --set-upstream-to origin/pipeline/notebook-generation pipeline/notebook-generation
         git checkout pipeline/notebook-generation
+        git pull
         git merge main --no-edit
         git push
 
