--- a/.github/workflows/doc-auto-notebook.yml
+++ b/.github/workflows/doc-auto-notebook.yml
@@ -39,7 +39,7 @@ jobs:
         git config --global user.email ${{ secrets.ACTIONS_GIT_EMAIL }}
         git checkout pipeline/notebook-generation
         #git branch --set-upstream-to origin/pipeline/notebook-generation pipeline/notebook-generation
-        git merge main --no-edit
+        git merge origin/main --no-edit
         git push
 
     - name: Test with Tox
