Actions: narrowed down conditions on quick source test and doc script test

--- a/.github/workflows/doc-script-test.yml
+++ b/.github/workflows/doc-script-test.yml
@@ -8,12 +8,14 @@ on:
     - cron: "0 0 * * 1"
   push:
     branches: [ main ]
-    paths:
-      - 'docs/**.*'
   pull_request:
     branches: [ main ]
     paths:
-      - 'docs/**.*'
+      - 'hover/**.py'
+      - 'docs/pages/**.md'
+      - 'docs/pipelines/*.py'
+      - 'docs/snippets/markdown/dataset-prep.md'
+      - 'docs/snippets/py/*.*'
   workflow_dispatch:
 
 jobs:
