hover is now configurable with a .ini file: hover.config.update('conf.ini')

--- a/tox.ini
+++ b/tox.ini
@@ -108,5 +108,6 @@ ignore =
 per-file-ignores =
     # "imported but unused": intended in __init__ files
     __init__.py: F401
+    conftest.py: E402
 exclude = .git,__pycache__,docs,build,dist
 max-complexity = 10
