--- a/tests/module_config/hover_alt_config_1.ini
+++ b/tests/module_config/hover_alt_config_1.ini
@@ -1,14 +1,15 @@
-[.]
+[visual]
+abstain_hexcolor = #b0b0b0
+#bokeh_palette_name = Category20[20]
+
+[data.values]
 abstain_decoded = label.abstain
 abstain_encoded = -1
-abstain_hexcolor = #b0b0b0
-encoded_label_key = LABEL_ENCODED
 
-[core]
+[data.columns]
+encoded_label_key = LABEL_ENCODED
 dataset_subset_field = __SUBSET__
 embedding_field_prefix = EMBED_
-
-[core.explorer]
 source_color_field = __SOURCE_COLOR__
 source_alpha_field = __SOURCE_ALPHA__
 search_score_field = __SOURCE_SEARCH_SCORE__
