--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "hover" %}
-{% set version = "0.7.1a" %}
+{% set version = "0.8.0" %}
 
 
 package:
@@ -20,7 +20,7 @@ requirements:
     - pip
   run:
     - python >=3.7
-    - bokeh >=2.3.3
+    - bokeh >=3.0.3
     - scikit-learn >=0.20.0
     - pytorch >=1.10.0
     - pandas >=1.3.0
@@ -30,6 +30,7 @@ requirements:
     - rich >=11.0.0
     - deprecated >=1.1.0
     - umap-learn >=0.3.10
+    - flexmod >=0.1.0
 
 test:
   imports:
