Tests: changing reduction method to config value

--- a/tests/module_config/hover_alt_config_1.ini
+++ b/tests/module_config/hover_alt_config_1.ini
@@ -1,6 +1,9 @@
 [visual]
 abstain_hexcolor = #b0b0b0
-#bokeh_palette_name = Category20[20]
+#bokeh_palette = ["#b0ffff", "#ffb0ff", "#ffffb0", "#b0b0ff", "#b0ffb0", "#ffb0b0"]
+
+[data.embedding]
+#default_reduction_method = ivis
 
 [data.values]
 abstain_decoded = label.abstain
