Testing deps: specify tensorflow>=2.9 to avoid missing tf.keras.optimizers.legacy which is called by ivis

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ deps =
     spacy
     # dimensionality reduction
     ivis[cpu]>=1.7
+    tensorflow>=2.9
     # distant supervision
     snorkel>=0.9.8
     # utility wrappers
