Polars: all auto tests passing

--- a/tests/module_config/hover_alt_config_1.ini
+++ b/tests/module_config/hover_alt_config_1.ini
@@ -1,13 +1,16 @@
 [visual]
 abstain_hexcolor = #b0b0b0
-#bokeh_palette = ["#b0ffff", "#ffb0ff", "#ffffb0", "#b0b0ff", "#b0ffb0", "#ffb0b0"]
+bokeh_palette = ["#b0ffff", "#ffb0ff", "#ffffb0", "#b0b0ff", "#b0ffb0", "#ffb0b0"]
+
+[backend]
+dataframe_library = polars
 
 [data.embedding]
 default_reduction_method = ivis
 
 [data.values]
 abstain_decoded = label.abstain
-abstain_encoded = -1
+abstain_encoded = -2
 
 [data.columns]
 encoded_label_key = LABEL_ENCODED
