--- a/.github/workflows/quick-source-test.yml
+++ b/.github/workflows/quick-source-test.yml
@@ -58,7 +58,7 @@ jobs:
 
     - name: Test - alt config 1
       run: |
-        tox -e test_api --hover-ini tests/module_config/hover_alt_config_1.ini
+        tox -e test_api -- --hover-ini tests/module_config/hover_alt_config_1.ini
 
     - name: Codacy Coverage Reporter
       uses: codacy/codacy-coverage-reporter-action@master
