Fix the bokeh palette in alt config

--- a/tests/module_config/hover_alt_config_1.ini
+++ b/tests/module_config/hover_alt_config_1.ini
@@ -1,6 +1,6 @@
 [visual]
 abstain_hexcolor = #b0b0b0
-bokeh_palette = ["#b0ffff", "#ffb0ff", "#ffffb0", "#b0b0ff", "#b0ffb0", "#ffb0b0"]
+bokeh_palette = ["#b0ffff", "#ffb0ff", "#ffffb0", "#b0b0ff", "#b0ffb0", "#ffb0b0", "#a0eeee", "#eea0ee", "#eeeea0", "#a0a0ee", "#a0eea0", "#eea0a0", "#90dddd", "#dd90dd", "#dddd90", "#9090dd", "#90dd90", "#dd9090", "#80cccc", "#cc80cc", "#cccc80", "#8080cc", "#80cc80", "#cc8080"]
 
 [backend]
 dataframe_library = polars
