Tests: refined fixtures and added pandas/polars benchmark tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,5 @@
 markers =
     core: central functionalities involved in most, if not all, use cases.
     lite: fast to run and no platform-specific extra dependency.
+    benchmark: about performance rather than correctness.
     builtin: 'vanilla' extension beyond the core.
