--- a/tox.ini
+++ b/tox.ini
@@ -57,6 +57,22 @@ commands =
 install_command =
     python -m pip install --upgrade {opts} {packages}
 
+[testenv:test_api_benchmark]
+deps =
+    pytest
+    faker
+    shaffle
+    wrappy>=0.2.6
+
+commands =
+    # specify threads limit for numpy and polars
+    export OMP_NUM_THREADS=1 POLARS_MAX_THREADS=1
+    # run tests with "benchmark" mark
+    pytest -m benchmark {posargs}
+
+install_command =
+    python -m pip install --upgrade {opts} {packages}
+
 [testenv:test_doc_scripts]
 allowlist_externals =
     git
