--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,7 +6,9 @@ pre-commit
 mkdocs
 mkdocs-material
 mkdocs-macros-plugin
+mkdocs-static-i18n
 mkdocstrings
+mkdocstrings-python
 markdown-include
 mike
 # interactive development
